analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/typeAliasActualization.java
@jvm.pack.ActualAnnotation()
@jvm.pack.RegularAnnotation()
public final class ClassToCheck /* common.pack.ClassToCheck*/ {
  public  ClassToCheck();//  .ctor()
}
